--- a/lodspeakr/components/types/viz:ChartVisualization/html.template
+++ b/lodspeakr/components/types/viz:ChartVisualization/html.template
@@ -62,6 +62,7 @@
 <script src="{{lodspk.home}}js/presenter.js"></script>
 <script>
 var datasetEditors = new Array();
+var showDatasetsTables = false;
 $(function(){
 var config = {
       chartType: "{{first.main.vizType.curie|explode:":"|pop}}",
@@ -79,17 +80,14 @@ var config = {
       {%endif%}
       readonly: true,
       manualdata: true
-    };
+};
+getData("{{first.params.dataset.value}}");
 
-
-data = getData("{{first.params.dataset.value}}");
-console.log(newData);
 config.data = newData;
-//datasetEditors.push(new Editor(config));
-var j = datasetEditors.length;
-datasetEditors[j] = new Editor;
-datasetEditors[j].init(config);
-datasetEditors[j].setData(newData.rows);
+var j = datasetEditors.length-1;
+//datasetEditors[j] = new Editor;
+//datasetEditors[j].init(config);
+//datasetEditors[j].setData(newData.rows);
 datasetEditors[j].renderChart(config);
 
 
