--- a/lodspeakr/components/services/showDataset/html.template
+++ b/lodspeakr/components/services/showDataset/html.template
@@ -1,8 +1,4 @@
-{%include "../../includes/header.inc"%}
-<div class="btn-group">
-<button class="btn btn-large btn-info" id="dataset-button" data-toggle="modal" data-target="#dataset-dialog">New dataset</button>
-<button class="btn btn-large btn-info merge-button" data-toggle="modal" data-target="#merge-dialog">Merge Datasets</button>
-</div>
+{%include "../../includes/header_edit.inc"%}
 <div class="container-fluid" id="main" style="width:40%"></div>
 <div class="container-fluid" id="viz" style="width:40%">
  <div class="span12"><div id="mapContainer" class="vizContainer"></div><div id="chartContainer" class="vizContainer"></div></div>
