agregado titulo a datasets agrupados
arreglado prevencion de nan cuando se agregan datos

--- a/lodspeakr/components/services/showDataset/html.template
+++ b/lodspeakr/components/services/showDataset/html.template
@@ -227,6 +227,7 @@ function createEditor(config){
         config.columns.push({id: d.header[i].value, name: d.header[i].name, field: d.header[i].value, cssClass: "cell-title", sortable: true });
       }
       config.data = d.rows;
+      config.title = d.title;
       config['sortcol'] = config.headerColumns[0];
       i = datasetEditors.length;
       datasetEditors[i] = new Editor;
