--- a/lodspeakr/components/types/viz:VirtualDataset/json.template
+++ b/lodspeakr/components/types/viz:VirtualDataset/json.template
@@ -1,6 +1,7 @@
 {
 {%if first.main.groupVariable.value%}
   "groupby": "{{first.main.groupVariable.value}}",
+  "source": "{{first.main.source.value}}",
 "dataset": "{{first.main.dataset.value}}",
   "operation": "{{first.main.operation.value}}",
   "variable": [{%for i in models.main%}{%if !forloop.last%},{%endif%}"{{i.variableGrouped.value}}"{%endfor%}]
