--- a/lodspeakr/components/types/viz:MapVisualization/html.template
+++ b/lodspeakr/components/types/viz:MapVisualization/html.template
@@ -62,6 +62,7 @@
 <script>
 var datasetEditors = new Array();
 var showDatasetsTables = false;
+var links = [];
 $(function(){
 var config = {
       dataset: "{{first.main.dataset.mirroredUri|urifier}}",
@@ -76,13 +77,14 @@ var config = {
       readonly: true,
       manualdata: true
     };
+links.push({source: "This map", target: "{{first.main.datasetURL.value}}", sourceType: "map", targetType: "dataset"});
 
 data = getData("{{first.params.dataset.value}}");
 //datasetEditors.push(new Editor(config));
-var j = datasetEditors.length;
-datasetEditors[j] = new Editor;
-datasetEditors[j].init(config);
-datasetEditors[j].setData(newData.rows);
+var j = datasetEditors.length-1;
+//datasetEditors[j] = new Editor;
+//datasetEditors[j].init(config);
+//datasetEditors[j].setData(newData.rows);
 var e = datasetEditors[j];
 e.setData(newData.rows);
 e.renderMap(config);
@@ -94,5 +96,10 @@ $("#embed-url").html(window.location+"");
 });
 
 </script>
-</body>
+{%include "../../includes/metadata_footer.inc"%}
+<script>
+$(function(){
+  drawMetadata();
+});
+</script></body>
 </html>
