--- a/lodspeakr/components/services/edit/html.template
+++ b/lodspeakr/components/services/edit/html.template
@@ -219,6 +219,11 @@ $(function(){
     }else{
       $("#main").append("<div class='row arrow'>GENERATES CHART</div>");
       datasetEditors[j].renderChart(viz);
+      $("#main").prepend("<div class='row span12' style='text-align:center'><button id='turnTables' class='btn btn-large btn-warning'>Show tables</button></div>");
+      $("#turnTables").on('click', function(){
+        var label = tablesDisplayed?"Hide":"Show";
+        $(this).html(label+" tables");
+        displayTables(tablesDisplayed);});
     }
   }
 
